# ros_templates

./: .gitignore  README.md
ros_pkg_template_cpp/: CHANGELOG.rst  CMakeLists.txt  nodelets.xml  package.xml
ros_pkg_template_cpp/cfg/: DynConf.cfg
ros_pkg_template_cpp/config/: params.yaml
ros_pkg_template_cpp/include/ros_pkg_template/: algorithm.hpp  ros_pkg_template.hpp  visibility.h
ros_pkg_template_cpp/launch/: launch_ros_pkg_template.launch  launch_ros_pkg_template.launch.py
ros_pkg_template_cpp/src/: algorithm.cpp  ros_pkg_template.cpp  ros_pkg_template_node.cpp
ros_pkg_template_cpp/test/: algorithm_test.cpp
