<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ros_pkg_template_cpp</name>
  <version>0.0.1</version>
  <description>Ros lifecycle component template</description>
  <maintainer email="jcarlos3094@gmail.com">Jose Carlos Garcia Moreno</maintainer>
  <license>Apache License 2.0</license>
  <author>Jose Carlos Garcia Moreno</author>
  <author email="jcarlos3094@gmail.com">Jose Carlos Garcia Moreno</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>rclcpp_lifecycle</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>rclcpp_lifecycle</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
