<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ros_pkg_template_cpp</name>
  <version>0.0.1</version>
  <description>Ros node template</description>
  <maintainer email="jcarlos3094@gmail.com">Jose Carlos Garcia Moreno</maintainer>
  <license>Apache License 2.0</license>
  <author>Jose Carlos Garcia Moreno</author>
  <author email="jcarlos3094@gmail.com">Jose Carlos Garcia Moreno</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>boost</build_depend>

  <depend>eigen</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>dynamic_reconfigure</depend>

  <build_depend>roslint</build_depend>
</package>
